Dark mode issue fixed.

--- a/public/style.css
+++ b/public/style.css
@@ -87,7 +87,9 @@ body {
 .dark-mode h1 {
   color: #fff;
 }
-
+.dark-mode .question-heading {
+  color: #000;
+}
 body.dark-mode {
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)),
     url('./movie-bg.jpg');
@@ -130,6 +132,7 @@ button {
   max-height: 3rem;
   grid-column: 2;
   grid-row: 2;
+  border-color: var(--primary-color);
 }
 
 button:hover {
